# math

./: .gitignore  app.py  curriculum.py  pyproject.toml  railway.toml  requirements.txt
static/: manifest.json  service-worker.js  style.css
templates/: history.html  index.html  quiz.html  review.html
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/fr/LC_MESSAGES/: messages.mo  messages.po
