[project]
name = "math-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.6",
    "flask-babel>=4.0.0",
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]
